# GpxFitApp

./: CMakeLists.txt  Main.qml  Page1.qml  Page2.qml  Page3.qml  Page5.qml  cmake-format.json  fit.cpp  fit.h  main.cpp  qtquickcontrols2.conf  res.qrc
android/: AndroidManifest.xml  PathUtil.java  __AndroidManifest.xml__
android/res/xml/: qtprovider_paths.xml
android/src/org/xrsoft/fitapp/: QShareActivity.java
android/src/org/xrsoft/utils/: FileUtils.java  QSharePathResolver.java  QShareUtils.java
bt/: bluetoothbaseclass.cpp  bluetoothbaseclass.h  connectionhandler.cpp  connectionhandler.h  devicefinder.cpp  devicefinder.h  devicehandler.cpp  devicehandler.h  deviceinfo.cpp  deviceinfo.h
cpp/: shareutils.cpp  shareutils.hpp
cpp/android/: androidshareutils.cpp  androidshareutils.hpp
data/: 20230704142924.fit  20230709120005.fit  MAGENE_C206Pro_2023-08-05-09-57-40_50229574_1691267580997.fit
